--- a/client/vite-project/package.json
+++ b/client/vite-project/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.6.3",
     "sass": "^1.89.1"
   },
   "devDependencies": {
