--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "generate-password": "^1.7.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.3",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.6"
   },
   "devDependencies": {
