--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "nodemon ./server/app.js"
   },
   "keywords": [],
@@ -18,6 +18,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "generate-password": "^1.7.1",
+    "jest": "^30.1.3",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.3",
     "node-cron": "^4.2.1",
