--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "generate-password": "^1.7.1",
     "jest": "^30.1.3",
     "jsonwebtoken": "^9.0.2",
+    "mysql": "^2.18.1",
     "mysql2": "^3.14.3",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.6"
