--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-handlebars": "^8.0.3",
     "generate-password": "^1.7.1",
     "jest": "^30.1.3",
     "jsonwebtoken": "^9.0.2",
