--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "jest",
-    "start": "nodemon ./server/app.js"
+    "start": "node ./server/app.js"
   },
   "keywords": [],
   "author": "",
