--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
+    "convert-svg-to-png": "^0.7.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
@@ -25,7 +26,8 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.14.3",
     "node-cron": "^4.2.1",
-    "nodemailer": "^7.0.6"
+    "nodemailer": "^7.0.6",
+    "puppeteer": "^24.31.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
