--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@resvg/resvg-js": "^2.6.2",
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
-    "convert-svg-to-png": "^0.7.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
@@ -26,8 +26,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.14.3",
     "node-cron": "^4.2.1",
-    "nodemailer": "^7.0.6",
-    "puppeteer": "^24.31.0"
+    "nodemailer": "^7.0.6"
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
